5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1674_1872.log
== TEST (2019-04-29 16:44:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and y != 0):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")
else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:44:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and y != 0):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:45:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and y != 0):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- EXECUTION TIME:
0.185653
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:45:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and y != 0):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:45:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:48:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	elif((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- ERROR:
File "XXXX", line 6
    elif((x>0) and (y>0)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:48:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:49:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	if((x>0) and (y>0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:49:38) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	if((x > 0) and (y > 0)):
		print("Q1")
	elif((x<0) and (y>0)):
		print("Q2")
	elif((x<0) and (y<0)):
		print("Q3")
	elif((x>0) and (y<0)):
		print("Q4")
	elif((x!=0) and (y==0)):
		print("Eixo X")
	elif((x==0) and (y!=0)):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:50:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x != 0) and (y != 0)):
	if((x > 0) and (y > 0)):
		print("Q1")
	elif((x < 0) and (y > 0)):
		print("Q2")
	elif((x < 0) and (y < 0)):
		print("Q3")
	elif((x > 0) and (y < 0)):
		print("Q4")
	elif((x != 0) and (y == 0)):
		print("Eixo X")
	elif((x == 0) and (y !=0 )):
		print("Eixo Y")

else:
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 16:51:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x == 0) and (y == 0)):
	print("Origem")

else:
	if((x > 0) and (y > 0)):
		print("Q1")
	elif((x < 0) and (y > 0)):
		print("Q2")
	elif((x < 0) and (y < 0)):
		print("Q3")
	elif((x > 0) and (y < 0)):
		print("Q4")
	elif((x != 0) and (y == 0)):
		print("Eixo X")
	elif((x == 0) and (y !=0 )):
		print("Eixo Y")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 16:51:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("Coordenada x: "))
y = float(input("Coordenada y: "))

if((x == 0) and (y == 0)):
	print("Origem")

else:
	if((x > 0) and (y > 0)):
		print("Q1")
	elif((x < 0) and (y > 0)):
		print("Q2")
	elif((x < 0) and (y < 0)):
		print("Q3")
	elif((x > 0) and (y < 0)):
		print("Q4")
	elif((x != 0) and (y == 0)):
		print("Eixo X")
	elif((x == 0) and (y !=0 )):
		print("Eixo Y")
-- EXECUTION TIME:
0.185539
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
